[gd_scene load_steps=7 format=3 uid="uid://doqpj3kg0vddk"]

[ext_resource type="Script" path="res://scripts/baseLevel.gd" id="1_i8lrg"]
[ext_resource type="FontFile" uid="uid://d4cruh03p3ty4" path="res://assets/fonts/RevMiniPixel.ttf" id="2_wp66i"]
[ext_resource type="Texture2D" uid="uid://b6bp06msf1ya2" path="res://assets/Mini FX, Items & UI/Food Items/gray_star.png" id="3_hk0uf"]
[ext_resource type="Script" path="res://scripts/ComandsContainer.gd" id="3_ovs63"]
[ext_resource type="Texture2D" uid="uid://dedk3n2d1ntu3" path="res://assets/Mini FX, Items & UI/Food Items/star.png" id="5_vn0uj"]
[ext_resource type="Script" path="res://scripts/dropArea.gd" id="6_4n43j"]

[node name="baseLevel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i8lrg")
star_texture = ExtResource("5_vn0uj")
gray_star_texture = ExtResource("3_hk0uf")

[node name="LevelArea" type="PanelContainer" parent="."]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="CommandArea" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/CommandArea"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_ovs63")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CommandArea/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/CommandArea/PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
theme_override_font_sizes/font_size = 24
text = "Lista de Comandos
"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/CommandArea/PanelContainer/VBoxContainer"]
z_as_relative = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/v_separation = 10
columns = 2

[node name="ExecuteArea" type="MarginContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ExecuteArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("6_4n43j")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ExecuteArea/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
theme_override_font_sizes/font_size = 24
text = "Area de Execução"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/ScrollContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 40

[node name="ClearButton" type="Button" parent="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
text = " LIMPAR"

[node name="RestartButton" type="Button" parent="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
text = " REINICIAR"

[node name="ExecuteButton" type="Button" parent="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
text = " EXECUTAR"

[node name="LevelMenu" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 40

[node name="LevelInfo" type="PanelContainer" parent="MarginContainer/LevelMenu"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/LevelMenu/LevelInfo"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="LevelTitle" type="Label" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
theme_override_font_sizes/font_size = 18
text = "LEVEL - 1"
horizontal_alignment = 1

[node name="LevelTips" type="Label" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
text = "DICAS: USE OS BLOCOS DE COMANDO PARA LEVAR O PLAYER ATE O COMPUTADOR. "
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 20

[node name="Star" type="TextureRect" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_vn0uj")

[node name="Label" type="Label" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
theme_override_font_sizes/font_size = 18
text = "ACESSE O COMPUTADOR."
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Star" type="TextureRect" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer/HBoxContainer2"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_vn0uj")

[node name="Label" type="Label" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
theme_override_font_sizes/font_size = 18
text = "USE O COMANDO ANDAR. "
horizontal_alignment = 1
vertical_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_constants/separation = 20

[node name="Star" type="TextureRect" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer/HBoxContainer3"]
texture_filter = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("5_vn0uj")

[node name="Label" type="Label" parent="MarginContainer/LevelMenu/LevelInfo/VBoxContainer/HBoxContainer3"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_wp66i")
theme_override_font_sizes/font_size = 18
text = "USE NO MÁXIMO 4 COMANDOS."
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_clear_button_pressed"]
[connection signal="pressed" from="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/HBoxContainer/ExecuteButton" to="." method="_on_execute_button_pressed"]
[connection signal="pressed" from="MarginContainer/ExecuteArea/PanelContainer/VBoxContainer/HBoxContainer/ExecuteButton" to="MarginContainer/ExecuteArea/PanelContainer" method="_on_execute_button_pressed"]
